tests/new_merge_diff/new_merge_diff.exp
Error ------------------------------------------------------------------------------------------------------ main.js:6:2

Cannot cast `x1` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   main.js:6:2
    6| (x1: empty);
        ^^

References:
   get_prop_union.js:15:23
   15| declare export var x: typeof c.f;
                             ^^^^^^^^^^ [1]
   main.js:6:6
    6| (x1: empty);
            ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ main.js:6:2

Cannot cast `x1` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   main.js:6:2
    6| (x1: empty);
        ^^

References:
   get_prop_union.js:15:23
   15| declare export var x: typeof c.f;
                             ^^^^^^^^^^ [1]
   main.js:6:6
    6| (x1: empty);
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- main.js:22:2

Cannot cast `frozenSuitevalues` to `IndirectFrozenSuiteValues` because string literal `Extra Suite` [1] is incompatible
with literal union [2]. [incompatible-cast]

   main.js:22:2
   22| (frozenSuitevalues: IndirectFrozenSuiteValues); // error due to no OpenT indirection
        ^^^^^^^^^^^^^^^^^

References:
   main.js:21:32
   21| declare var frozenSuitevalues: FrozenSuiteValues;
                                      ^^^^^^^^^^^^^^^^^ [1]
   main.js:22:21
   22| (frozenSuitevalues: IndirectFrozenSuiteValues); // error due to no OpenT indirection
                           ^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- main.js:49:2

Cannot cast `0` to `S4` because number [1] is incompatible with string [2]. [incompatible-cast]

   main.js:49:2
   49| (0: S4); // error number ~> string
        ^ [1]

References:
   recursive_types.js:15:17
   15| export type S = string | R; // okay
                       ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- main.js:50:2

Cannot cast `0` to `R4` because number [1] is incompatible with `R` [2]. [incompatible-cast]

   main.js:50:2
   50| (0: R4); // error number ~> R (obj)
        ^ [1]

References:
   main.js:50:5
   50| (0: R4); // error number ~> R (obj)
           ^^ [2]



Found 5 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
